--- a/config/database.yml
+++ b/config/database.yml
@@ -1,15 +1,26 @@
-# SQLite version 3.x
-#   gem install sqlite3
-#
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem 'sqlite3'
 development:
-  adapter: sqlite3
-  database: db/development.sqlite3
+  adapter: postgresql
+  encoding: unicode
+  database: books
+  host: localhost
   pool: 5
-  timeout: 5000
+  username: sky
+  password: spindoctor
 
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
+staging:
+  adapter: postgresql
+  encoding: unicode
+  database: books
+  host: localhost
+  pool: 5
+  username: sky
+  password: spindoctor
 
+test:
+  adapter: postgresql
+  encoding: unicode
+  database: bookstest
+  host: localhost
+  pool: 5
+  username: sky
+  password: spindoctor
