[Populator] Added populator

--- a/config/database.yml
+++ b/config/database.yml
@@ -1,7 +1,7 @@
 development:
   adapter: postgresql
   encoding: unicode
-  database: books
+  database: booksfaker
   host: localhost
   pool: 5
   username: sky
@@ -10,7 +10,7 @@ development:
 staging:
   adapter: postgresql
   encoding: unicode
-  database: books
+  database: booksfaker
   host: localhost
   pool: 5
   username: sky
